--- a/_config.yml
+++ b/_config.yml
@@ -28,19 +28,19 @@ projects:
     projects:
     # - repo-name
 
-# social_media:
+social_media:
   # behance: your_username
   # dribbble: your_username
   # facebook: your_username
   # hackerrank: your_username
   # instagram: your_username
   # keybase: your_username
-  # linkedin: jared-wilson-b2b950162/
+ linkedin: jared-wilson-b2b950162/
   # mastodon: your_username
   # medium: your_username
   # stackoverflow: your_user_id
   # telegram: your_username
-  # twitter: https://twitter.com/jaredwilson377
+ twitter: https://twitter.com/jaredwilson377
   # unsplash: your_username
   # vk: your_username
   # website: http://your_website_url
