--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,9 @@ projects:
     projects:
     # - repo-name
 
+social_media:
+  linkedin: jared-wilson-b2b950162/
+  twitter: https://twitter.com/jaredwilson377
 # social_media:
   # behance: your_username
   # dribbble: your_username
