--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,7 @@ plugins:
   - jemoji
 
 permalink: /:year/:month/:day/:title/
-user:
-  name: Jared Wilson
+
 defaults:
   -
     scope:
@@ -28,7 +27,9 @@ projects:
     forks: true
     projects:
     # - repo-name
-
+name: Jared Wilson
+email: jaredwilson377@gmail.com
+bio: Full stack developer. Hire me
 social_media:
   linkedin: jared-wilson-b2b950162/
   twitter: https://twitter.com/jaredwilson377
